--- a/src/app/geoportal/geoportal.component.html
+++ b/src/app/geoportal/geoportal.component.html
@@ -82,6 +82,45 @@
         </div>
       </div>
 
+      <!-- Botón flotante de leyenda -->
+      <button mat-fab 
+              color="primary" 
+              class="legend-button"
+              (click)="toggleLegend()"
+              matTooltip="Ver leyenda de categorías">
+        <mat-icon>{{ showLegend() ? 'close' : 'info' }}</mat-icon>
+      </button>
+
+      <!-- Panel de leyenda -->
+      <div class="legend-panel" *ngIf="showLegend()">
+        <div class="legend-header">
+          <h3>Leyenda de Categorías</h3>
+          <button mat-icon-button (click)="toggleLegend()" class="legend-close">
+            <mat-icon>close</mat-icon>
+          </button>
+        </div>
+        <div class="legend-content">
+          <div class="legend-item">
+            <img src="https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-blue.png" 
+                 alt="Punto de Reunión" 
+                 class="legend-icon">
+            <span class="legend-text">Punto de Reunión</span>
+          </div>
+          <div class="legend-item">
+            <img src="https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-green.png" 
+                 alt="Punto de Referencia" 
+                 class="legend-icon">
+            <span class="legend-text">Punto de Referencia</span>
+          </div>
+          <div class="legend-item">
+            <img src="https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-violet.png" 
+                 alt="Punto de Interés" 
+                 class="legend-icon">
+            <span class="legend-text">Punto de Interés</span>
+          </div>
+        </div>
+      </div>
+
       <router-outlet></router-outlet>
     </mat-sidenav-content>
   </mat-sidenav-container>
