--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -88,7 +88,7 @@ body {
 }
 
 .login-wrapper mat-form-field input {
-  color: #ffffff !important;
+  color: #000000 !important;
 }
 
 .login-wrapper mat-form-field input::placeholder {
