--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -64,8 +64,8 @@
             <mat-form-field class="example-full-width" appearance="fill">
               <mat-label style="font-weight: bold;">USUARIO</mat-label>
               <mat-icon matPrefix>person</mat-icon>
-              <input matInput type="text" name="username" formControlName="username" 
-                (input)="convertirAMayusculas()" placeholder="Usuario Administrador"
+              <input matInput type="text" name="username" formControlName="username"
+                 placeholder="Usuario Administrador"
                 [(ngModel)]="username" class="username" maxlength="60" />
               <mat-error *ngIf="_formulario.get('username')?.hasError('required')">
                 El usuario es requerido
@@ -74,8 +74,8 @@
             <mat-form-field class="example-full-width" appearance="fill">
               <mat-label style="font-weight: bold;">CONTRASEÑA</mat-label>
               <mat-icon matPrefix>lock</mat-icon>
-              <input matInput type="password" formControlName="password" name="password" 
-                placeholder="Contraseña" [(ngModel)]="password" class="password" 
+              <input matInput type="password" formControlName="password" name="password"
+                placeholder="Contraseña" [(ngModel)]="password" class="password"
                 required minlength="8" maxlength="30" />
               <mat-error *ngIf="_formulario.get('password')?.hasError('required')">
                 La contraseña es requerida
