--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -37,7 +37,7 @@
           <span class="footer-divider">|</span>
           <span class="footer-year">© {{year}}</span>
           <span class="footer-system"> Todos los derechos reservados</span>
-          <button mat-raised-button color="primary" (click)="login()">Iniciar Sesión</button>
+          <span class="footer-system login-link" style="cursor: pointer;color: #3f3f3f;" (click)="login()">Iniciar Sesión</span>
         </div>
       </div>
     </footer>
